# lodge

./: .gitignore  CMakeLists.txt  README.md  log.txt  log_item.cpp  meson.build  meson_options.txt  perf.data
.cache/clangd/index/: gmock-actions.h.F627C148D42D668B.idx  gmock-all.cc.B64B410B9FEB4708.idx  gmock-cardinalities.cc.E69D1E5A26F55012.idx  gmock-cardinalities.h.36811722C238CF35.idx  gmock-function-mocker.h.03DD4A4FC4219042.idx  gmock-generated-actions.h.873F330C8FCA616E.idx  gmock-internal-utils.cc.C7E3BD026E7F358D.idx  gmock-internal-utils.h.4CDB3735BEE586B2.idx  gmock-matchers.cc.1DDB088308F54ECE.idx  gmock-matchers.h.3094C2B04DC1D37C.idx  gmock-matchers.h.424F0FE5EC691C1C.idx  gmock-more-actions.h.B1861B545A241E41.idx  gmock-more-matchers.h.23DE1C52F3CA2161.idx  gmock-nice-strict.h.48C2FC4543E4BCE8.idx  gmock-port.h.138CCFA67A17E540.idx  gmock-port.h.A617C437995F88F2.idx  gmock-pp.h.7101CED0F49837A0.idx  gmock-spec-builders.cc.353719E666BB2EFC.idx  gmock-spec-builders.h.DAFA05C949930629.idx  gmock.cc.65FBD5CEA1B6C4FB.idx  gmock.h.E0C8F2AC73B57C96.idx  gtest-all.cc.7F42E500A15C8A18.idx  gtest-death-test-internal.h.09F3D028678FFE50.idx  gtest-death-test.cc.B0607D5D4960A332.idx  gtest-death-test.h.1162C14DA6E72F94.idx  gtest-filepath.cc.E2AAC69FB6EC9AE7.idx  gtest-filepath.h.21B5A8E0020F3E96.idx  gtest-internal-inl.h.D43A2C1CB4882847.idx  gtest-internal.h.A4F380BF2300904A.idx  gtest-matchers.cc.B0EB4B6EC5214A0A.idx  gtest-matchers.h.1F5418D42F50CCCA.idx  gtest-message.h.517A7F8A357C8B3C.idx  gtest-param-test.h.300D0438C561C5FD.idx  gtest-param-util.h.438B7F596C613CA0.idx  gtest-port-arch.h.417CC384D08B10AF.idx  gtest-port.cc.5EC313D506940EEF.idx  gtest-port.h.16744CD44AE18BC9.idx  gtest-port.h.C3174E57BD6EB04B.idx  gtest-printers.cc.4578C45B7D147DE6.idx  gtest-printers.h.B1D2B7A59F3B2E57.idx  (+14 more)
examples/: a.out  example.cpp  example1.cpp  meson.build
src/: CMakeLists.txt  async.hpp  entry.hpp  event.hpp  format.hpp  levels.cpp  levels.h  levels.hpp  lodge.cc  lodge.h  lodge.hpp  log_item.h  log_item.hpp  logprinter.hpp  macros.hpp  meson.build  mpsc.hpp  outputStream.hpp  printer.hpp  queue.h  queue.hpp  queue_w.hpp  sinks.cc  sinks.h  sinks.hpp  source.hpp  ts_deque.hpp  ts_queue.hpp
test/: concurrent_queue_test.cpp  main_test.cpp  meson.build  queue_mc_test.cpp  queue_test.cpp
